<?xml version="1.0"?>
<package>
	<name>tinycthread_catkin</name>
	<version>0.0.0</version>
	<description>tinycthread_catkin</description>
	<maintainer email="marius.b.fehr@gmail.com">Marius Fehr</maintainer>
	<license>GPL</license>

	<buildtool_depend>catkin</buildtool_depend>
	<buildtool_depend>catkin_simple</buildtool_depend>
</package>

